# TelescopeMonteCarlo

./: .gitignore  CMakeLists.txt  Makefile_mc  README.md  main_mc.cc  material_mc.cc  material_mc.h  montecarlo.h  particle_mc.h  telescope_mc.cc
Win/: TelescopeMC.sln
Win/Debug/: TelescopeMC.ilk
Win/TelescopeMC/: TelescopeMC.vcxproj  TelescopeMC.vcxproj.filters
Win/TelescopeMC/ROOT 5.34/: TelescopeMC.lastbuildstate  cl.command.1.tlog
conf/: telescopSetup.xml
main/: CMakeLists.txt
main/NotInUse/: Beam_mc.cc  intersection.h  montecarlo.cc
main/inc/: Beam_mc.h  Planes_mc.h  Positions_mc.h  TelescopeSetup_mc.h  XMLHelpers.h  geometric.h  particle_mc.h  randomGen.h  telescope_mc.h
main/src/: Planes_mc.cc  TelescopeSetup_mc.cc  XMLHelpers.cc  geometrics.cc  main_mc.cc  particle_mc.cc  randomGen.cc
